--- a/src/com/njnu/demo1/db.properties
+++ b/src/com/njnu/demo1/db.properties
@@ -1,3 +1,11 @@
-jdbc.url=jdbc:mysql://localhost:3306/test
-jdbc.username=root
-jdbc.password=root
+#jdbc.url=jdbc:mysql://localhost:3306/test
+#jdbc.username=root
+#jdbc.password=root
+#jdbc.driver=com.mysql.jdbc.Driver
+#jdbc.type=mysql
+
+jdbc.url=jdbc:oracle:thin:@47.101.146.77:1521:orcl
+jdbc.username=nsd
+jdbc.password=nsd
+jdbc.driver=oracle.jdbc.driver.OracleDriver
+jdbc.type=oracle
